--- a/config/database_sqlite3.yml
+++ b/config/database_sqlite3.yml
@@ -4,28 +4,22 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: postgresql
-  database: sample_develpment
+  adapter: sqlite3
+  database: db/development.sqlite3
   pool: 5
-  encoding: unicode
-  username: postgres
-  password: vectra16i
+  timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: postgresql
-  database: sample_test
+  adapter: sqlite3
+  database: db/test.sqlite3
   pool: 5
-  encoding: unicode
-  username: postgres
-  password: vectra16i
+  timeout: 5000
 
 production:
-  adapter: postgresql
-  database: sample_production
+  adapter: sqlite3
+  database: db/production.sqlite3
   pool: 5
-  encoding: unicode
-  username: postgres
-  password: vectra16i
+  timeout: 5000
